Add code to install packages

--- a/README.qmd
+++ b/README.qmd
@@ -28,7 +28,7 @@ Finally, we will also look at how the 'tidy' philosophy could be implemented in 
 
 The focus throughout will be on practical skills and using packages effectively within the wider context of project management tools, integrated development environments (we recommend VS Code with appropriate extensions or RStudio), and version control systems.
 
-## Learning outcomes
+## Learning objectives
 
 By the end of the session, participants will be able to:
 
@@ -37,8 +37,34 @@ By the end of the session, participants will be able to:
 - Use the `geos` package to perform geometric operations on geographic data
 - Understand the strengths and weaknesses of the `tidyverse` for geographic data analysis
 
+## Prerequisites
 
-## Learning objectives
+You need to have the following packages installed:
 
+```{r}
+#| message: false
+#| warning: false
+# Install remotes if not already installed
+if (!requireNamespace("remotes")) {
+    install.packages("remotes")
+}
 
-  - 2023-08-28, 11:00–12:30, Room 21 (Sala 21)
+# The packages we'll use
+pkgs = c(
+    "sf",
+    "tidyverse",
+    "geos",
+    "data.table"
+)
+
+remotes::install_cran(pkgs)
+```
+
+## Introduction
+
+The `tidyverse` is a collection of packages that provides a unified set of functions for data science.
+A good way to understand it is to get started with a small dataset.
+
+```{r}
+
+```
