--- a/README.qmd
+++ b/README.qmd
@@ -1,6 +1,9 @@
 ---
 format: gfm
 title: Tidy geographic data with sf, dplyr, ggplot2, geos and friends
+number-sections: true
+editor: 
+  render-on-save: true
 ---
 
 These materials were created for the OpenGeoHub Summer School 2023.
@@ -9,12 +12,11 @@ See the [parent repo](https://github.com/robinlovelace/opengeohub2023) and [sess
 
 ## Abstract
 
-
 This lecture will provide an introduction to working with geographic data using R in a 'tidy' way.
 It will focus on using the `sf` package to read, write, manipulate, and plot geographic data in combination with the `tidyverse` metapackage.
 Why use the `sf` package with the `tidyverse`?
 The lecture will outline some of the ideas underlying the `tidyverse` and how they can speed-up data analysis pipelines, while making data analysis code easier to read and write.
-We will see how the following lines
+We will see how the following lines:
 
 ```r
 library(sf)
@@ -39,7 +41,13 @@ By the end of the session, participants will be able to:
 
 ## Prerequisites
 
-You need to have the following packages installed:
+We recommend you run the code in the practical session with a modern integrated development environment (IDE) such as
+
+- RStudio: an IDE focussed on data science and software development with R. See [posit.co](https://posit.co/download/rstudio-desktop/) for installation instructions.
+- VS Code: a general purpose, popular and future-proof IDE with support for R. See [github.com/REditorSupport/vscode-R](https://github.com/REditorSupport/vscode-R#getting-started) and [quarto.org](https://quarto.org/docs/get-started/) for installation instructions.
+
+After you have installed a suitable IDE you will need to install R packages used in this tutorial.
+You can install the packages we'll use with the following commands:
 
 ```{r}
 #| message: false
@@ -57,12 +65,20 @@ pkgs = c(
     "data.table",
     "spData"
 )
+```
 
+```{r}
+#| eval: false
 remotes::install_cran(pkgs)
+```
+
+```{r}
+#| message: false
+#| warning: false
 sapply(pkgs, require, character.only = TRUE)
 ```
 
-## Introduction
+## An introduction to the tidyverse
 
 The `tidyverse` is a collection of packages that provides a unified set of functions for data science.
 A good way to understand it is to get started with a small dataset.
@@ -73,9 +89,12 @@ After loading the packages run the following commands to create an object called
 names(world) # check we have the data
 poland = world |>
     filter(name_long == "Poland")
-cents = world |>
+world_centroids = world |>
     st_centroid()
-countries = cents[poland, , op = st_is_within_distance, dist = 2e5]
+country_centroids = world_centroids |>
+  st_filter(poland, .predicate = st_is_within_distance, dist = 2e5)
+countries = world |>
+  filter(name_long %in% country_centroids$name_long)
 countries_df = countries |>
   select(name_long, pop, area_km2) |>
   st_drop_geometry()
@@ -87,4 +106,35 @@ We can print out the contents of the data frame by typing its name (this is equi
 
 ```{r}
 countries_df
+```
+
+The output above shows information about each country in a tabular.
+A feature of the tidyverse is that its data frame class (the `tibble` which extends base R's `data.frame` as shown below) prints results in an informative and space-efficient way.
+
+```{r}
+class(countries_df)
+```
+
+## Exercises
+
+1. Re-create the `country_centroids` object, using `world_centroids` and `poland` and inputs, but this time using base R syntax with the `[` operator.
+  - Bonus: use the `bench::mark()` function to compare the performance of the base R and tidyverse implementation
+
+```{r}
+#| eval: false
+#| echo: false
+country_centroids2 = world_centroids[poland, , op = st_is_within_distance, dist = 2e5]
+waldo::compare(country_centroids, country_centroids2)
+#> ✔ No differences
+res = bench::mark(
+    base = world_centroids[poland, , op = st_is_within_distance, dist = 2e5],
+    st_filter = world_centroids |>
+  st_filter(poland, .predicate = st_is_within_distance, dist = 2e5)
+)
+res
+#> # A tibble: 2 × 13
+#>   expression      min median `itr/sec` mem_alloc `gc/sec` n_itr  n_gc total_time
+#>   <bch:expr> <bch:tm> <bch:>     <dbl> <bch:byt>    <dbl> <int> <dbl>   <bch:tm>
+#> 1 base         10.7ms 12.4ms      81.2     208KB     6.58    37     3      456ms
+#> 2 st_filter      12ms 12.5ms      79.7     199KB     6.64    36     3      452ms
 ```
